testdeployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: temptest
spec:
  rules:
  - host: grafana.ms.vodacom.corp
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
