testdeployments/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation-webhook-cfg
  labels:
    app: admission-webhook
webhooks:
  - name: required-labels.vodacom.com
    clientConfig:
      service:
        name: admission-webhook-svc
        namespace: cluster-services
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lKQUluVlRYSzdsRDJFTUEwR0NTcUdTSWIzRFFFQkN3VUFNQmd4RmpBVUJnTlYKQkFNTURURXdMakV6TWk0eU1UTXVNekl3SGhjTk1UY3dOakE0TVRNME1USXhXaGNOTkRReE1ESTBNVE0wTVRJeApXakFZTVJZd0ZBWURWUVFEREEweE1DNHhNekl1TWpFekxqTXlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DCkFROEFNSUlCQ2dLQ0FRRUEzL1ByNFBrZkM0L2tGaWhrcEZtY2ZtbGNFaTN1b21iQ0tnbjNsTDVnNWc4c3hlYzMKbmZsZ3lFbmNPTXh2cjc0TmtEeU5wM2I4ZWhkYlNyVjJXRHJjSEd2VVorRXRiNHBseGwyU2cvV0dLZGlvYkZVbwp2Q0RieWxIVW9j [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["deployments","services"]
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
